--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,13 +3,16 @@ $secondary-font-family: Arial, Helvetica, sans-serif;
 
 // colors
 $makerlab-green: rgba(20, 185, 154, 1);
-$makerlab-green-medium: darken($makerlab-green, 10%);
+$makerlab-green-light: desaturate(lighten($makerlab-green, 10%), 20%);
+$makerlab-green-medium: desaturate($makerlab-green, 15%);
 
 $purple: rgba(49, 36, 80, 1);
 $teal: rgba(2, 128, 144, 1);
+$teal-medium: rgba(2, 128, 144, .35);
 $dark-blue: rgba(5, 102, 141, 1);
 $bright-purple: rgba(80, 82, 181, 1);
 $blue: rgba(0, 86, 141, 1);
+$blue-light: desaturate(lighten($blue, 10%), 20%);
 
 $black-45: rgba(255, 255, 255, 0.45);
 $white-75: rgba(255,255,255,.7);
