Event page update and sponsor logo added to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,20 @@
 <footer>
-    <center>
-        <div class="contact-text">Contact the MakerLab</div>
-        <a title="facebook" href="https://www.facebook.com/brandeismakerlab/?fref=ts" target="_blank"><span class="icon fa-facebook"></span></a>
-        <a title="instagram" href="https://www.instagram.com/brandeismakerlab/" target="_blank"><span class="icon fa-instagram"></span></a>
-        <a title="email" href="mailto:makerlab@brandeis.edu" target="_blank"><span class="icon fa-envelope-o"></span></a>
-        <a title="youtube" href="https://www.youtube.com/channel/UCdqXpHOpI83oZ6-8_mEKPfw" target="_blank"><span class="icon fa-youtube-play"></span></a>
-        <a title="sketchfab" href=""><span class="icon fa-cube" target="_blank"></span></a>
-        <a title="twitter" href="" target="_blank"><span class="icon fa-twitter"></span></a>
-    </center>
+    <div class="pure-g">
+        <div class="pure-u-1-2">
+          <center>
+            <div class="contact-text">Contact the MakerLab</div>
+            <a title="facebook" href="https://www.facebook.com/brandeismakerlab/?fref=ts" target="_blank"><span class="icon fa-facebook"></span></a>
+            <a title="instagram" href="https://www.instagram.com/brandeismakerlab/" target="_blank"><span class="icon fa-instagram"></span></a>
+            <a title="email" href="mailto:makerlab@brandeis.edu" target="_blank"><span class="icon fa-envelope-o"></span></a>
+            <a title="youtube" href="https://www.youtube.com/channel/UCdqXpHOpI83oZ6-8_mEKPfw" target="_blank"><span class="icon fa-youtube-play"></span></a>
+            <a title="sketchfab" href="https://sketchfab.com/BrandeisMakerLab"><span class="icon fa-cube" target="_blank"></span></a>
+            <a title="twitter" href="https://twitter.com/BMakerlab" target="_blank"><span class="icon fa-twitter"></span></a>
+          </center>
+        </div>
+        <div class="pure-u-1-2">
+          <center>
+            <a title="DCD" href="https://www.deepcoredata.com/" target="_blank"><img src="/assets/images/Deep-Core-Data-Logo.png" style="padding-bottom:10px;"></a>
+          </center>
+        </div>
+      </div>
 </footer>
