--- a/_includes/makers-in-residence.html
+++ b/_includes/makers-in-residence.html
@@ -2,7 +2,7 @@
 
 <section id="makers-in-residence">
 	<div class="indented-title">
-	    <h2>Ongoing Maker in Residence Projects
+	    <h2>Active Project Spotlights
 			<form class="inline-button-link" method="LINK" action="/projects">
 				<input TYPE="submit" value="See more projects" class="tiny-button">
 			</form>
