--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,15 +3,16 @@
             <li><a href="/">Home</a></li>
             <li><a href="/news">Training and Events</a></li>
             <li><a href="/resources">Resources</a></li>
+            <li><a href="/services">Services</a></li>
             <li><a href="/projects">Featured Projects</a></li>
             <li><a href="/workspaces">Workspaces</a></li>
             <li><a href="/people">People and Groups</a></li>
             <li><a href="https://blogs.brandeis.edu/makerlab/" target="_blank">Blog</a></li>
-            <li>
+            <!-- <li>
                 <form method="LINK" action="http://giving.brandeis.edu/makerlab" target="_blank">
                     <input TYPE="submit" value="Donate!">
                 </form>
-            </li>
+            </li> -->
             <!-- <li><a href="/blog">Blog</a></li> -->
             <li class="icon">
                 <a href="javascript:void(0);" style="font-size:15px;" onclick="navigation()">☰</a>
